src/main/java/uk/nhs/digital/mait/tkwx/tk/internalservices/rules/parser/SimulatorRulesParser.java
// Generated from SimulatorRulesParser.g4 by ANTLR 4.5.3

package uk.nhs.digital.mait.tkwx.tk.internalservices.rules.parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SimulatorRulesParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMENT=1, NL=2, SPACES=3, ESCAPED_QUOTE=4, QUOTED_STRING=5, LPAREN=6, 
		RPAREN=7, COLON=8, INTEGER=9, DOT=10, IF=11, THEN=12, ELSE=13, INCLUDE=14, 
		NONE=15, UUID_UPPER=16, UUID_LOWER=17, HL7_DATETIME=18, ISO8601_DATETIME=19, 
		RFC822_DATETIME=20, SUBSTITUTION_XPATH=21, SUBSTITUTION_REGEXP=22, LITERAL=23, 
		PROPERTY=24, CLASS=25, XPATHEQUALS=26, XPATHNOTEQUALS=27, XSLT=28, CONTAINS=29, 
		NOTCONTAINS=30, ALWAYS=31, NEVER=32, XPATHEXISTS=33, XPATHNOTEXISTS=34, 
		XPATHCOMPARE=35, XPATHNOTCOMPARE=36, XPATHIN=37, XPATHNOTIN=38, XPATHMATCHES=39, 
		XPATHNOTMATCHES=40, SCHEMA=41, MATCHES=42, NOTMATCHES=43, CONTEXT_PATH=44, 
		CONTENT=45, HTTP_HEADER=46, JWT_HEADER=47, JWT_PAYLOAD=48, MESH_CTL=49, 
		MESH_DAT=50, PLUS=51, NEXT=52, AND=53, OR=54, NOT=55, EQUALS=56, WITH_HTTP_HEADERS=57, 
		BEGIN_RESPONSES=58, END_RESPONSES=59, BEGIN_SUBSTITUTIONS=60, END_SUBSTITUTIONS=61, 
		BEGIN_EXPRESSIONS=62, END_EXPRESSIONS=63, BEGIN_RULE=64, END_RULE=65, 
		VARIABLE_NAME=66, IDENTIFIER=67, DOT_SEPARATED_IDENTIFIER=68, URL=69, 
		URI=70, PATH=71, XPATH=72, REGEXP=73, ANNOTATION_TEXT=74, SP=75, CST=76, 
		LF=77;
	public static final int
		RULE_input = 0, RULE_block = 1, RULE_xpath_arg = 2, RULE_responses_block = 3, 
		RULE_substitutions_block = 4, RULE_expressions_block = 5, RULE_simrules = 6, 
		RULE_responses = 7, RULE_response = 8, RULE_response_name = 9, RULE_response_url = 10, 
		RULE_reason_code = 11, RULE_reason_phrase = 12, RULE_response_action = 13, 
		RULE_httpheaderresponse = 14, RULE_httpheader = 15, RULE_http_header_value = 16, 
		RULE_variable_assignment = 17, RULE_substitutions = 18, RULE_substitution = 19, 
		RULE_substitution_tag = 20, RULE_property_file_name = 21, RULE_property_name = 22, 
		RULE_substitution_no_arg = 23, RULE_substitution_xpath = 24, RULE_substitution_regexp = 25, 
		RULE_substitution_literal = 26, RULE_substitution_property = 27, RULE_substitution_class = 28, 
		RULE_expressions = 29, RULE_expression = 30, RULE_expression_name = 31, 
		RULE_expression_no_arg = 32, RULE_expression_one_arg = 33, RULE_data_source = 34, 
		RULE_class_reg_exp_from = 35, RULE_class_reg_exp_replace = 36, RULE_class_extracted_value = 37, 
		RULE_class_args = 38, RULE_expression_class = 39, RULE_xml_match_type = 40, 
		RULE_match_type = 41, RULE_text_match_source = 42, RULE_xml_match_source = 43, 
		RULE_http_header_name = 44, RULE_xslt_file = 45, RULE_expression_two_arg = 46, 
		RULE_expression_xpath_compare = 47, RULE_simrule_block = 48, RULE_match_rule = 49, 
		RULE_rule_lines = 50, RULE_rule_line = 51, RULE_if_statement = 52, RULE_if_expression = 53, 
		RULE_true_response = 54, RULE_false_response = 55, RULE_include_statement = 56;
	public static final String[] ruleNames = {
		"input", "block", "xpath_arg", "responses_block", "substitutions_block", 
		"expressions_block", "simrules", "responses", "response", "response_name", 
		"response_url", "reason_code", "reason_phrase", "response_action", "httpheaderresponse", 
		"httpheader", "http_header_value", "variable_assignment", "substitutions", 
		"substitution", "substitution_tag", "property_file_name", "property_name", 
		"substitution_no_arg", "substitution_xpath", "substitution_regexp", "substitution_literal", 
		"substitution_property", "substitution_class", "expressions", "expression", 
		"expression_name", "expression_no_arg", "expression_one_arg", "data_source", 
		"class_reg_exp_from", "class_reg_exp_replace", "class_extracted_value", 
		"class_args", "expression_class", "xml_match_type", "match_type", "text_match_source", 
		"xml_match_source", "http_header_name", "xslt_file", "expression_two_arg", 
		"expression_xpath_compare", "simrule_block", "match_rule", "rule_lines", 
		"rule_line", "if_statement", "if_expression", "true_response", "false_response", 
		"include_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'\\\"'", null, "'('", "')'", "':'", null, "'.'", 
		null, null, null, "'INCLUDE'", "'NONE'", "'UUID'", "'uuid'", "'HL7datetime'", 
		"'ISO8601datetime'", "'RFC822datetime'", null, null, "'Literal'", "'Property'", 
		"'Class'", null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "'+'", null, null, null, null, "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "COMMENT", "NL", "SPACES", "ESCAPED_QUOTE", "QUOTED_STRING", "LPAREN", 
		"RPAREN", "COLON", "INTEGER", "DOT", "IF", "THEN", "ELSE", "INCLUDE", 
		"NONE", "UUID_UPPER", "UUID_LOWER", "HL7_DATETIME", "ISO8601_DATETIME", 
		"RFC822_DATETIME", "SUBSTITUTION_XPATH", "SUBSTITUTION_REGEXP", "LITERAL", 
		"PROPERTY", "CLASS", "XPATHEQUALS", "XPATHNOTEQUALS", "XSLT", "CONTAINS", 
		"NOTCONTAINS", "ALWAYS", "NEVER", "XPATHEXISTS", "XPATHNOTEXISTS", "XPATHCOMPARE", 
		"XPATHNOTCOMPARE", "XPATHIN", "XPATHNOTIN", "XPATHMATCHES", "XPATHNOTMATCHES", 
		"SCHEMA", "MATCHES", "NOTMATCHES", "CONTEXT_PATH", "CONTENT", "HTTP_HEADER", 
		"JWT_HEADER", "JWT_PAYLOAD", "MESH_CTL", "MESH_DAT", "PLUS", "NEXT", "AND", 
		"OR", "NOT", "EQUALS", "WITH_HTTP_HEADERS", "BEGIN_RESPONSES", "END_RESPONSES", 
		"BEGIN_SUBSTITUTIONS", "END_SUBSTITUTIONS", "BEGIN_EXPRESSIONS", "END_EXPRESSIONS", 
		"BEGIN_RULE", "END_RULE", "VARIABLE_NAME", "IDENTIFIER", "DOT_SEPARATED_IDENTIFIER", 
		"URL", "URI", "PATH", "XPATH", "REGEXP", "ANNOTATION_TEXT", "SP", "CST", 
		"LF"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SimulatorRulesParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SimulatorRulesParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class InputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(SimulatorRulesParser.EOF, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public InputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_input; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitInput(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputContext input() throws RecognitionException {
		InputContext _localctx = new InputContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 58)) & ~0x3f) == 0 && ((1L << (_la - 58)) & ((1L << (BEGIN_RESPONSES - 58)) | (1L << (BEGIN_SUBSTITUTIONS - 58)) | (1L << (BEGIN_EXPRESSIONS - 58)) | (1L << (BEGIN_RULE - 58)))) != 0)) {
				{
				{
				setState(114);
				block();
				}
				}
				setState(119);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(120);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public Responses_blockContext responses_block() {
			return getRuleContext(Responses_blockContext.class,0);
		}
		public Substitutions_blockContext substitutions_block() {
			return getRuleContext(Substitutions_blockContext.class,0);
		}
		public Expressions_blockContext expressions_block() {
			return getRuleContext(Expressions_blockContext.class,0);
		}
		public SimrulesContext simrules() {
			return getRuleContext(SimrulesContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_block);
		try {
			setState(126);
			switch (_input.LA(1)) {
			case BEGIN_RESPONSES:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				responses_block();
				}
				break;
			case BEGIN_SUBSTITUTIONS:
				enterOuterAlt(_localctx, 2);
				{
				setState(123);
				substitutions_block();
				}
				break;
			case BEGIN_EXPRESSIONS:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				expressions_block();
				}
				break;
			case BEGIN_RULE:
				enterOuterAlt(_localctx, 4);
				{
				setState(125);
				simrules();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Xpath_argContext extends ParserRuleContext {
		public TerminalNode XPATH() { return getToken(SimulatorRulesParser.XPATH, 0); }
		public TerminalNode PATH() { return getToken(SimulatorRulesParser.PATH, 0); }
		public TerminalNode REGEXP() { return getToken(SimulatorRulesParser.REGEXP, 0); }
		public TerminalNode INTEGER() { return getToken(SimulatorRulesParser.INTEGER, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SimulatorRulesParser.IDENTIFIER, 0); }
		public TerminalNode URL() { return getToken(SimulatorRulesParser.URL, 0); }
		public TerminalNode CST() { return getToken(SimulatorRulesParser.CST, 0); }
		public TerminalNode VARIABLE_NAME() { return getToken(SimulatorRulesParser.VARIABLE_NAME, 0); }
		public Xpath_argContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xpath_arg; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitXpath_arg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Xpath_argContext xpath_arg() throws RecognitionException {
		Xpath_argContext _localctx = new Xpath_argContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_xpath_arg);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_la = _input.LA(1);
			if ( !(_la==INTEGER || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & ((1L << (VARIABLE_NAME - 66)) | (1L << (IDENTIFIER - 66)) | (1L << (URL - 66)) | (1L << (PATH - 66)) | (1L << (XPATH - 66)) | (1L << (REGEXP - 66)) | (1L << (CST - 66)))) != 0)) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Responses_blockContext extends ParserRuleContext {
		public TerminalNode BEGIN_RESPONSES() { return getToken(SimulatorRulesParser.BEGIN_RESPONSES, 0); }
		public ResponsesContext responses() {
			return getRuleContext(ResponsesContext.class,0);
		}
		public TerminalNode END_RESPONSES() { return getToken(SimulatorRulesParser.END_RESPONSES, 0); }
		public Responses_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_responses_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitResponses_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Responses_blockContext responses_block() throws RecognitionException {
		Responses_blockContext _localctx = new Responses_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_responses_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(BEGIN_RESPONSES);
			setState(131);
			responses();
			setState(132);
			match(END_RESPONSES);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Substitutions_blockContext extends ParserRuleContext {
		public TerminalNode BEGIN_SUBSTITUTIONS() { return getToken(SimulatorRulesParser.BEGIN_SUBSTITUTIONS, 0); }
		public SubstitutionsContext substitutions() {
			return getRuleContext(SubstitutionsContext.class,0);
		}
		public TerminalNode END_SUBSTITUTIONS() { return getToken(SimulatorRulesParser.END_SUBSTITUTIONS, 0); }
		public Substitutions_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_substitutions_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitSubstitutions_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Substitutions_blockContext substitutions_block() throws RecognitionException {
		Substitutions_blockContext _localctx = new Substitutions_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_substitutions_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			match(BEGIN_SUBSTITUTIONS);
			setState(135);
			substitutions();
			setState(136);
			match(END_SUBSTITUTIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Expressions_blockContext extends ParserRuleContext {
		public TerminalNode BEGIN_EXPRESSIONS() { return getToken(SimulatorRulesParser.BEGIN_EXPRESSIONS, 0); }
		public ExpressionsContext expressions() {
			return getRuleContext(ExpressionsContext.class,0);
		}
		public TerminalNode END_EXPRESSIONS() { return getToken(SimulatorRulesParser.END_EXPRESSIONS, 0); }
		public Expressions_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expressions_block; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitExpressions_block(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Expressions_blockContext expressions_block() throws RecognitionException {
		Expressions_blockContext _localctx = new Expressions_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_expressions_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			match(BEGIN_EXPRESSIONS);
			setState(139);
			expressions();
			setState(140);
			match(END_EXPRESSIONS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimrulesContext extends ParserRuleContext {
		public List<Simrule_blockContext> simrule_block() {
			return getRuleContexts(Simrule_blockContext.class);
		}
		public Simrule_blockContext simrule_block(int i) {
			return getRuleContext(Simrule_blockContext.class,i);
		}
		public SimrulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simrules; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitSimrules(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SimrulesContext simrules() throws RecognitionException {
		SimrulesContext _localctx = new SimrulesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_simrules);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(143); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(142);
					simrule_block();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(145); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResponsesContext extends ParserRuleContext {
		public List<ResponseContext> response() {
			return getRuleContexts(ResponseContext.class);
		}
		public ResponseContext response(int i) {
			return getRuleContext(ResponseContext.class,i);
		}
		public TerminalNode EOF() { return getToken(SimulatorRulesParser.EOF, 0); }
		public ResponsesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_responses; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitResponses(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResponsesContext responses() throws RecognitionException {
		ResponsesContext _localctx = new ResponsesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_responses);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INCLUDE || _la==IDENTIFIER) {
				{
				{
				setState(147);
				response();
				}
				}
				setState(152);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(154);
			_la = _input.LA(1);
			if (_la==EOF) {
				{
				setState(153);
				match(EOF);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ResponseContext extends ParserRuleContext {
		public Response_nameContext response_name() {
			return getRuleContext(Response_nameContext.class,0);
		}
		public Response_urlContext response_url() {
			return getRuleContext(Response_urlContext.class,0);
		}
		public HttpheaderresponseContext httpheaderresponse() {
			return getRuleContext(HttpheaderresponseContext.class,0);
		}
		public Variable_assignmentContext variable_assignment() {
			return getRuleContext(Variable_assignmentContext.class,0);
		}
		public Reason_codeContext reason_code() {
			return getRuleContext(Reason_codeContext.class,0);
		}
		public Reason_phraseContext reason_phrase() {
			return getRuleContext(Reason_phraseContext.class,0);
		}
		public Response_actionContext response_action() {
			return getRuleContext(Response_actionContext.class,0);
		}
		public Include_statementContext include_statement() {
			return getRuleContext(Include_statementContext.class,0);
		}
		public ResponseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_response; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitResponse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResponseContext response() throws RecognitionException {
		ResponseContext _localctx = new ResponseContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_response);
		int _la;
		try {
			setState(172);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(156);
				response_name();
				setState(157);
				response_url();
				setState(160);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
				case 1:
					{
					setState(158);
					reason_code();
					}
					break;
				case 2:
					{
					setState(159);
					reason_phrase();
					}
					break;
				}
				setState(163);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(162);
					response_action();
					}
					break;
				}
				}
				setState(166);
				_la = _input.LA(1);
				if (_la==WITH_HTTP_HEADERS) {
					{
					setState(165);
					httpheaderresponse();
					}
				}

				setState(169);
				_la = _input.LA(1);
				if (_la==VARIABLE_NAME) {
					{
					setState(168);
					variable_assignment();
					}
				}

				}
				break;
			case INCLUDE:
				enterOuterAlt(_localctx, 2);
				{
				setState(171);
				include_statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Response_nameContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SimulatorRulesParser.IDENTIFIER, 0); }
		public Response_nameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_response_name; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SimulatorRulesParserVisitor ) return ((SimulatorRulesParserVisitor<? extends T>)visitor).visitResponse_name(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Response_nameContext response_name() throws RecognitionException {
		Response_nameContext _localctx = new Response_nameContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_response_name);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
